# linkerd2-proxy

./: Cargo.toml  Dockerfile  README.md  staleness.md
linkerd/addr/src/: lib.rs
linkerd/app/: Cargo.toml
linkerd/app/core/: Cargo.toml
linkerd/app/core/src/: classify.rs  config.rs  control.rs  dst.rs  errors.rs  handle_time.rs  lib.rs  metric_labels.rs  profiles.rs  retry.rs  svc.rs  trace.rs
linkerd/app/core/src/proxy/: buffer.rs  mod.rs  pending.rs  ready.rs  server.rs
linkerd/app/inbound/: Cargo.toml
linkerd/app/inbound/src/: endpoint.rs  lib.rs  orig_proto_downgrade.rs
linkerd/app/integration/: Cargo.toml
linkerd/app/integration/src/: controller.rs  proxy.rs
linkerd/app/integration/tests/: discovery.rs  profile_dst_overrides.rs  telemetry.rs  transparency.rs
linkerd/app/outbound/: Cargo.toml
linkerd/app/outbound/src/: endpoint.rs  lib.rs  orig_proto_upgrade.rs  require_identity_on_endpoint.rs
linkerd/app/src/: env.rs  identity.rs  lib.rs  oc_collector.rs
linkerd/app/src/dst/: mod.rs  resolve.rs
linkerd/buffer/: Cargo.toml
linkerd/buffer/src/: lib.rs  queue.rs
linkerd/cache/: Cargo.toml
linkerd/cache/src/: cache.rs  layer.rs  lib.rs
linkerd/concurrency-limit/: Cargo.toml
linkerd/concurrency-limit/src/: lib.rs
linkerd/dns/: Cargo.toml
linkerd/dns/src/: lib.rs  refine.rs
linkerd/duplex/src/: lib.rs
linkerd/fallback/src/: lib.rs
linkerd/http-classify/src/: layer.rs  lib.rs
linkerd/http-metrics/: Cargo.toml
linkerd/http-metrics/src/: lib.rs  service.rs
linkerd/http-metrics/src/requests/: layer.rs  mod.rs  report.rs
linkerd/lock/: Cargo.toml
linkerd/lock/src/: lib.rs
linkerd/proxy/api-resolve/src/: resolve.rs
linkerd/proxy/discover/src/: buffer.rs
linkerd/proxy/http/: Cargo.toml
linkerd/proxy/http/src/: box_request.rs  box_response.rs  boxed.rs  canonicalize.rs  client.rs  glue.rs  h1.rs  header_from_target.rs  insert.rs  lib.rs  normalize_uri.rs  orig_proto.rs  retry.rs  strip_header.rs  timeout.rs
linkerd/proxy/http/src/metrics/: classify.rs  mod.rs  report.rs  service.rs
linkerd/proxy/http/src/profiles/: concrete.rs  mod.rs  recognize.rs  requests.rs  service.rs
linkerd/proxy/resolve/src/: recover.rs
linkerd/proxy/tap/: Cargo.toml
linkerd/proxy/tap/src/: service.rs
linkerd/proxy/tcp/: Cargo.toml
linkerd/proxy/tcp/src/: balance.rs  boxed.rs  forward.rs  lib.rs
linkerd/proxy/transport/src/metrics/: mod.rs
linkerd/proxy/transport/src/tls/: client.rs
linkerd/proxy/transport/tests/: tls_accept.rs
linkerd/reconnect/src/: layer.rs
linkerd/result-cache/: Cargo.toml
linkerd/result-cache/src/: lib.rs
linkerd/retry/: Cargo.toml
linkerd/retry/src/: lib.rs
linkerd/router/src/: cache.rs  layer.rs  lib.rs
linkerd/service-profiles/: Cargo.toml
linkerd/service-profiles/src/: lib.rs
linkerd/stack/: Cargo.toml
linkerd/stack/src/: layer.rs  lib.rs  make.rs  make_tuple.rs  map_request.rs  map_response.rs  map_target.rs  new_service.rs  oneshot.rs  pending.rs  per_make.rs  per_service.rs  proxy.rs  shared.rs
linkerd/task/: Cargo.toml
linkerd/task/src/: lib.rs
linkerd/timeout/: Cargo.toml
linkerd/timeout/src/: error.rs  lib.rs  ready.rs  stack.rs
linkerd/trace-context/src/: layer.rs
linkerd2-proxy/: Cargo.toml
linkerd2-proxy/src/: main.rs
profiling/: benchmark-cargo-test-fortio.sh  plot.py
profiling/plot/: plot.py
