[workspace]
members = [
    "hyper-balance",
    "linkerd/addr",
    "linkerd/app/core",
    "linkerd/app/inbound",
    "linkerd/app/integration",
    "linkerd/app/outbound",
    "linkerd/app",
    "linkerd/conditional",
    "linkerd/dns/name",
    "linkerd/dns",
    "linkerd/drain",
    "linkerd/duplex",
    "linkerd/error",
    "linkerd/exp-backoff",
    "linkerd/fallback",
    "linkerd/identity",
    "linkerd/io",
    "linkerd/metrics",
    "linkerd/opencensus",
    "linkerd/proxy/api-resolve",
    "linkerd/proxy/core",
    "linkerd/proxy/detect",
    "linkerd/proxy/discover",
    "linkerd/proxy/http",
    "linkerd/proxy/identity",
    "linkerd/proxy/resolve",
    "linkerd/proxy/tap",
    "linkerd/proxy/tcp",
    "linkerd/proxy/transport",
    "linkerd/request-filter",
    "linkerd/reconnect",
    "linkerd/router",
    "linkerd/signal",
    "linkerd/stack",
    "linkerd/test-util",
    "linkerd/timeout",
    "linkerd2-proxy",
    "opencensus-proto",
]

# Debug symbols end up chewing up several GB of disk space, so better to just
# disable them.
[profile.dev]
debug = false
[profile.test]
debug = false

[patch.crates-io]
webpki = { git = "https://github.com/seanmonstar/webpki", branch = "cert-dns-names-0.21" }
hyper = { git = "https://github.com/hawkw/hyper", branch = "eliza/tracing-test2"}
h2 = { git = "https://github.com/hyperium/h2", branch = "eliza/tracing-test" }
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-io = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-sync = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-tcp = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-reactor = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-threadpool = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-executor = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-codec = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
tokio-current-thread = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tracing-test" }
