[package]
name = "linkerd2-buffer"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
indexmap = "1.0"
linkerd2-error = { path = "../error" }
tokio = "0.1.14"
tower = "0.1"
tracing = "0.1.9"
tracing-futures = "0.1"

