[package]
name = "linkerd2-result-cache"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false


[dependencies]
futures = "0.1"
linkerd2-cache = { path = "../cache" }
linkerd2-error = { path = "../error" }
linkerd2-stack = { path = "../stack" }
tokio = "0.1"
tower = "0.1"
tracing = "0.1.2"
