[package]
name = "linkerd2-retry"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false
description = """
Retry middleware for HTTP requests
"""

[dependencies]
bytes = "0.4"
futures = "0.1"
h2 = "0.1"
http = "0.1"
http-body = "0.1"
linkerd2-error = { path  = "../error" }
linkerd2-stack = { path  = "../stack" }
rand = "0.7"
tokio = "0.1"
tower = "0.1"
tower-util = "0.1"
tracing = "0.1.9"
tracing-futures = "0.1"
